--- a/src/components/ShopCard/ShopCard.scss
+++ b/src/components/ShopCard/ShopCard.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-width: 300px;
 
   &__img {
     overflow: hidden;
@@ -14,10 +15,24 @@
     -ms-border-radius: 150px 250px 30px 100px;
     -o-border-radius: 150px 250px 30px 100px;
     max-width: 250px;
+    position: relative;
 
     img {
       width: 100%;
       height: fit-content;
+    }
+
+    h3 {
+      position: absolute;
+      bottom: 1%;
+      right: 5%;
+      background-color: rgba(245, 238, 238, 0.459);
+      padding: 5px;
+      border-radius: 30px;
+      -webkit-border-radius: 30px;
+      -moz-border-radius: 30px;
+      -ms-border-radius: 30px;
+      -o-border-radius: 30px;
     }
   }
 
@@ -33,8 +48,7 @@
 
     &:hover {
       scale: 1.1;
+      opacity: .9;
     }
   }
-
- 
 }
