--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,13 +25,11 @@ button {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-color;
-  color: $text-color
+  color: $text-color;
 }
 
 code {
@@ -63,6 +61,10 @@ h3 {
   font-size: 22px;
 }
 
+h4{
+  font-size: 20px;
+}
+
 p {
   font-size: 18px;
   font-weight: 500;
@@ -70,4 +72,17 @@ p {
 
 span {
   font-size: 14px;
+}
+
+button{
+  padding: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  font-size: 16px;
+  &:hover{
+scale: 1.1;
+  }
 }
