--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,8 +1,10 @@
 .productCard {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 5px;
-  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  border: 1px solid rgba(0, 0, 0, 0.276);
+  border-radius: 10px;
+  padding: 8px;
 
   &__img {
     overflow: hidden;
@@ -16,17 +18,20 @@
     img {
       width: 100%;
       height: 100%;
+      display: block;
     }
   }
-
-  &__text {
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-    align-items: center;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.09);
   }
-  button{
-    img{
+  &__desc{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  button {
+    img {
       margin-right: 5px;
     }
   }
