--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,6 +1,6 @@
 .productCard {
   display: grid;
-  gap: 5px;
+  gap: 8px;
   grid-template-columns: repeat(2, 1fr);
   border: 1px solid rgba(0, 0, 0, 0.276);
   border-radius: 10px;
@@ -24,10 +24,20 @@
   &:hover {
     background-color: rgba(0, 0, 0, 0.09);
   }
-  &__desc{
+  &__desc {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    span {
+      background-color: red;
+      display: inline-flex;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      padding: 12px;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   button {
