--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 @import url(https://fonts.googleapis.com/css?family=Hind:300,regular,500,600,700);
 
 * {
@@ -6,6 +6,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: Hind, sans-serif;
+  transition: all 0.2s ease-in-out;
 }
 
 a {
@@ -25,7 +26,8 @@ button {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-color;
@@ -33,8 +35,7 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 ::-webkit-scrollbar {
@@ -51,6 +52,8 @@ code {
   max-width: 1920px;
   display: flex;
   flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.19);
+  min-height: 100vh;
 }
 
 h2 {
@@ -61,7 +64,7 @@ h3 {
   font-size: 22px;
 }
 
-h4{
+h4 {
   font-size: 20px;
 }
 
@@ -74,7 +77,7 @@ span {
   font-size: 14px;
 }
 
-button{
+button {
   padding: 10px;
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -82,7 +85,4 @@ button{
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   font-size: 16px;
-  &:hover{
-scale: 1.1;
-  }
 }
