update styles, logo

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,16 @@
-$background-color: #bbd0ff;
+$background-color: #ff8800;
 $light-color: #ffd6ff;
-$dark-color: #b8c0ff;
-$light-purple: #e7c6ff;
+$dark-color: #01233598;
+$light-purple: #ffd000;
 $dark-purple: #c8b6ff;
 $gray:hsla(0, 0%, 94%, 0.985);
 $text-color:#003049;
+$border-color:#582f0e;
+$white:#f4f1de;
+// $background-color: #bbd0ff;
+// $light-color: #ffd6ff;
+// $dark-color: #b8c0ff;
+// $light-purple: #e7c6ff;
+// $dark-purple: #c8b6ff;
+// $gray:hsla(0, 0%, 94%, 0.985);
+// $text-color:#003049;
