--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,49 +1,83 @@
-@import "../../styles/variables.scss";
+@import '../../styles/variables.scss';
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   border-bottom: 1px solid $gray;
   padding: 15px;
 
-  &__logo {
-    background-color: $light-purple;
-    color: $text-color;
-    padding: 5px;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    -ms-border-radius: 15px;
-    -o-border-radius: 15px;
+  &__link {
+    a {
+      display: inline-flex;
+      background-color: $light-purple;
+      color: $text-color;
+      padding: 5px 10px;
+      border-radius: 15px;
+      -webkit-border-radius: 15px;
+      -moz-border-radius: 15px;
+      -ms-border-radius: 15px;
+      -o-border-radius: 15px;
 
-    &:hover {
-      background-color: $text-color;
-      color: $light-purple;
+      &:hover {
+        background-color: $text-color;
+        color: $light-purple;
+      }
+    }
+  }
+
+  &__logo {
+    position: relative;
+
+    .logo__container {
+      position: absolute;
+      width: 250px;
+      height: 250px;
+      background-color: $light-purple;
+      border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding: 10px;
+      box-shadow: 0px 0px 10px 5px $background-color;
+      // filter: drop-shadow(0px 0px 0px 10px red);
+
+      img {
+        position: absolute;
+        bottom: 8%;
+        left: 50%;
+        width: 50%;
+        height: 50%;
+        transform: translateX(-50%);
+      }
     }
   }
 
   &__icons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     gap: 10px;
   }
 
   &__cart {
     position: relative;
+    width: 40px;
+    height: 40px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
 
     span {
       position: absolute;
-      top: -40%;
-      right: -40%;
-      height: 15px;
-      width: 15px;
+      top: -25%;
+      right: -25%;
+      width: 25px;
+      height: 25px;
       display: flex;
       align-items: center;
       justify-content: center;
-      background-color: $light-purple;
-      color: $text-color;
+      background-color: $text-color;
+      color: $white;
       border-radius: 50px;
       -webkit-border-radius: 50px;
       -moz-border-radius: 50px;
