--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,8 +1,10 @@
+@import '../../styles/variables.scss';
+
 .productCard {
   display: grid;
   gap: 8px;
   grid-template-columns: repeat(2, 1fr);
-  border: 1px solid rgba(0, 0, 0, 0.276);
+  border: 1px solid $border-color;
   border-radius: 10px;
   padding: 8px;
 
@@ -28,21 +30,23 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    span {
-      background-color: red;
-      display: inline-flex;
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      padding: 12px;
-      justify-content: center;
-      align-items: center;
-    }
+    
   }
 
   button {
     img {
       margin-right: 5px;
+    }
+    span {
+      background-color: $background-color;
+      color: $white;
+      display: inline-flex;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      // padding: 8px;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
