--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -74,7 +74,7 @@ p {
 }
 
 span {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 button {
@@ -85,4 +85,10 @@ button {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   font-size: 16px;
+  background-color: $light-purple;
+  color: $text-color;
+  &:hover {
+    background-color: $text-color;
+    color: $light-purple;
+  }
 }
