--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -11,11 +11,11 @@
 
   &__img {
     overflow: hidden;
-    border-radius: 75% 50px 20% 50px;
-    -webkit-border-radius: 75% 50px 20% 50px;
-    -moz-border-radius: 75% 50px 20% 50px;
-    -ms-border-radius: 75% 50px 20% 50px;
-    -o-border-radius: 75% 50px 20% 50px;
+    border-radius: 20% 75% 20% 50px;
+    -webkit-border-radius: 20% 75% 20% 50px;
+    -moz-border-radius: 20% 75% 20% 50px;
+    -ms-border-radius: 20% 75% 20% 50px;
+    -o-border-radius: 20% 75% 20% 50px;
 
     img {
       display: block;
