--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -1,3 +1,49 @@
-.cartItem{
+@import '../../styles/variables.scss';
+
+.cartItem {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+
+  &__img {
+    position: relative;
+    overflow: hidden;
+    border-radius: 150px 250px 30px 100px;
+    -webkit-border-radius: 150px 250px 30px 100px;
+    -moz-border-radius: 150px 250px 30px 100px;
+    -ms-border-radius: 150px 250px 30px 100px;
+    -o-border-radius: 150px 250px 30px 100px;
+
+    h3 {
+      position: absolute;
+      bottom: 36%;
+      left: 40%;
+      color: $text-color;
+      z-index: 3;
+    }
+
+    img {
+      display: block;
+    }
+
+    &::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.208);
+      backdrop-filter: blur(2px);
+      z-index: 2;
+    }
+  }
+
+  &__quantity{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+  }
 }
