--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -25,12 +25,16 @@
   }
   &:hover {
     background-color: rgba(0, 0, 0, 0.09);
+    border: 1px solid $border-color;
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 
+    5px 5px 10px rgba(0, 0, 0, 0.3),
+      inset -5px -5px 10px rgba(255, 255, 255, 0.3), 
+      inset 5px 5px 10px rgba(0, 0, 0, 0.3);
   }
   &__desc {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
   }
 
   button {
