--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -32,12 +32,12 @@
       position: absolute;
       width: 250px;
       height: 250px;
-      background-color: $light-purple;
+      // background-color: $light-purple;
       border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
       left: 50%;
       transform: translate(-50%, -50%);
       padding: 10px;
-      box-shadow: 0px 0px 10px 5px $background-color;
+      // box-shadow: 0px 0px 10px 5px $background-color;
       // filter: drop-shadow(0px 0px 0px 10px red);
 
       img {
