--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -84,11 +84,22 @@ button {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
-  font-size: 16px;
+  font-size: 18px;
   background-color: $light-purple;
   color: $text-color;
+
   &:hover {
     background-color: $text-color;
     color: $light-purple;
+  }
+}
+
+.disabled {
+  background-color: $gray;
+  cursor: no-drop;
+
+  &:hover {
+    background-color: $gray;
+    color: $text-color;
   }
 }
