add form, update styles

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,10 +3,11 @@ $light-color: #ffd6ff;
 $dark-color: #01233598;
 $light-purple: #ffd000;
 $dark-purple: #c8b6ff;
-$gray:hsla(0, 0%, 94%, 0.985);
+$gray:hsla(0, 1%, 17%, 0.459);
 $text-color:#003049;
 $border-color:#582f0e;
 $white:#f4f1de;
+$green:#389d85;
 // $background-color: #bbd0ff;
 // $light-color: #ffd6ff;
 // $dark-color: #b8c0ff;
