--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -4,10 +4,23 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  gap: 50px;
+  gap: 20px;
   position: relative;
+  width: 100%;
+  border: 1px solid $border-color;
+  border-radius: 10px;
+  padding: 8px;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.09);
+    border: 1px solid $border-color;
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 
+    5px 5px 10px rgba(0, 0, 0, 0.3),
+      inset -5px -5px 10px rgba(255, 255, 255, 0.3), 
+      inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+  }
 
   &__img {
+    width: 50%;
     position: relative;
     overflow: hidden;
     border-radius: 150px 250px 30px 100px;
@@ -15,6 +28,9 @@
     -moz-border-radius: 150px 250px 30px 100px;
     -ms-border-radius: 150px 250px 30px 100px;
     -o-border-radius: 150px 250px 30px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     h3 {
       position: absolute;
@@ -26,6 +42,8 @@
 
     img {
       display: block;
+      width: 100%;
+      height: 100%;
     }
 
     &::after{
@@ -41,6 +59,9 @@
     }
   }
 
+  &__info{
+width: 50%;
+  }
   &__quantity{
     display: flex;
     gap: 10px;
@@ -49,10 +70,10 @@
     
   }
 
-  &__cross{
+  &__delete{
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 8px;
+    right: 8px;
     width: 30px;
     height: 30px;
     display: flex;
