--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -1,8 +1,32 @@
-.cart{
+.cart {
   padding: 80px 20px 20px 20px;
- display: flex;
+  display: flex;
   flex-direction: column;
-  gap: 20px;
+
   justify-content: center;
   align-items: center;
+  .cart__items {
+    margin-top: 20px;
+    width: 100%;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    @media (max-width: 1240px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+  .cart__buttons {
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+
+    img{
+      margin-right: 6px;
+    }
+  }
+  h4 {
+    margin-top: 20px;
+  }
 }
