--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -13,10 +13,15 @@
   &:hover {
     background-color: rgba(0, 0, 0, 0.09);
     border: 1px solid $border-color;
-    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 
-    5px 5px 10px rgba(0, 0, 0, 0.3),
-      inset -5px -5px 10px rgba(255, 255, 255, 0.3), 
-      inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 5px 5px 10px rgba(0, 0, 0, 0.3),
+      inset -5px -5px 10px rgba(255, 255, 255, 0.3), inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+  }
+  h3 {
+    // position: absolute;
+    // bottom: 36%;
+    // left: 40%;
+    color: $text-color;
+    // z-index: 3;
   }
 
   &__img {
@@ -32,21 +37,13 @@
     justify-content: center;
     align-items: center;
 
-    h3 {
-      position: absolute;
-      bottom: 36%;
-      left: 40%;
-      color: $text-color;
-      z-index: 3;
-    }
-
     img {
       display: block;
       width: 100%;
       height: 100%;
     }
 
-    &::after{
+    &::after {
       content: '';
       position: absolute;
       top: 0;
@@ -59,18 +56,18 @@
     }
   }
 
-  &__info{
-width: 50%;
+  &__info {
+    width: 50%;
+    height: 100%;
   }
-  &__quantity{
+  &__quantity {
     display: flex;
     gap: 10px;
     align-items: center;
     justify-content: center;
-    
   }
 
-  &__delete{
+  &__delete {
     position: absolute;
     top: 8px;
     right: 8px;
