--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -27,28 +27,31 @@
 
   &__logo {
     position: relative;
+    // display: flex;
+    // justify-content: center;
 
-    .logo__container {
+    // .logo__container {
+    //   position: absolute;
+    //   width: 250px;
+    //   height: 250px;
+    //   // background-color: $light-purple;
+    //   border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
+    //   left: 50%;
+    //   transform: translate(-50%, -50%);
+    //   padding: 10px;
+    //   // box-shadow: 0px 0px 10px 5px $background-color;
+    //   // filter: drop-shadow(0px 0px 0px 10px red);
+
+    img {
       position: absolute;
-      width: 250px;
-      height: 250px;
-      // background-color: $light-purple;
-      border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
+      top: 0;
       left: 50%;
-      transform: translate(-50%, -50%);
-      padding: 10px;
-      // box-shadow: 0px 0px 10px 5px $background-color;
-      // filter: drop-shadow(0px 0px 0px 10px red);
-
-      img {
-        position: absolute;
-        bottom: 8%;
-        left: 50%;
-        width: 50%;
-        height: 50%;
-        transform: translateX(-50%);
-      }
+      width:  calc(80px + (150 - 80) * ((100vw - 320px) / (1920 - 320)));
+      max-width: 150px;
+      // height: 50%;
+      transform: translateX(-50%);
     }
+    // }
   }
 
   &__icons {
@@ -58,11 +61,21 @@
     gap: 10px;
   }
 
+  &__search {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   &__cart {
     position: relative;
     width: 40px;
     height: 40px;
-    img{
+    img {
       width: 100%;
       height: 100%;
     }
