update styles, add shopId to redux slice

--- a/src/pages/Orders/Orders.scss
+++ b/src/pages/Orders/Orders.scss
@@ -1,3 +1,13 @@
 .orders{
   padding: 80px 20px;
+
+  &__search{
+    position: relative;
+
+    &-cross{
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
 }
