--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -2,7 +2,7 @@
 
 .cartItem {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 20px;
   position: relative;
@@ -17,11 +17,7 @@
       inset -5px -5px 10px rgba(255, 255, 255, 0.3), inset 5px 5px 10px rgba(0, 0, 0, 0.3);
   }
   h3 {
-    // position: absolute;
-    // bottom: 36%;
-    // left: 40%;
     color: $text-color;
-    // z-index: 3;
   }
 
   &__img {
@@ -64,7 +60,16 @@
     display: flex;
     gap: 10px;
     align-items: center;
-    justify-content: center;
+    // font-size: 28px;
+    // justify-content: center;
+    span {
+      font-size: 28px;
+      font-weight: 600;
+    }
+  }
+  .ingredients {
+    overflow-y: auto;
+    max-height: 186px;
   }
 
   &__delete {
