--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -81,5 +81,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    img{
+      width: 100%;
+      height: 100%;
+    }
   }
 }
