--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -10,17 +10,21 @@
 
   &__img {
     overflow: hidden;
-    max-width: 250px;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-
+    width: 100%;
+    height: 100%;
+    // display: flex;
+    // justify-content: center;
+    // align-items: flex-start;
+    
     img {
       width: 100%;
-      height: 100%;
+      // height: 100%;
       display: block;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
     }
   }
   &:hover {
@@ -32,9 +36,14 @@
       inset 5px 5px 10px rgba(0, 0, 0, 0.3);
   }
   &__desc {
+    // width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+  &__ingredients{
+    max-height: 200px;
+    overflow-y: auto;
   }
 
   button {
