fix disable other shops, update styles

--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -4,11 +4,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  form{width: 50%;}
+
+  form {
+    width:  calc(200px + (300 - 200) * ((100vw - 320px) / (1920 - 320)));;
+  }
   label {
-    // background-color: red;
     display: flex;
     border-bottom: 1px solid $border-color;
+    p {
+      // width: fit-content;
+      white-space: nowrap;
+    }
   }
   input,
   textarea {
