--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,12 +11,12 @@
       display: inline-flex;
       background-color: $light-purple;
       color: $text-color;
-      padding: 5px 10px;
-      border-radius: 15px;
-      -webkit-border-radius: 15px;
-      -moz-border-radius: 15px;
-      -ms-border-radius: 15px;
-      -o-border-radius: 15px;
+      padding: calc(5px + (10 - 5) * ((100vw - 320px) / (1920 - 320)));
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
 
       &:hover {
         background-color: $text-color;
@@ -27,31 +27,15 @@
 
   &__logo {
     position: relative;
-    // display: flex;
-    // justify-content: center;
-
-    // .logo__container {
-    //   position: absolute;
-    //   width: 250px;
-    //   height: 250px;
-    //   // background-color: $light-purple;
-    //   border-radius: 50% 50% 50% 50% / 0% 0% 100% 100%;
-    //   left: 50%;
-    //   transform: translate(-50%, -50%);
-    //   padding: 10px;
-    //   // box-shadow: 0px 0px 10px 5px $background-color;
-    //   // filter: drop-shadow(0px 0px 0px 10px red);
 
     img {
       position: absolute;
       top: 0;
       left: 50%;
-      width:  calc(80px + (150 - 80) * ((100vw - 320px) / (1920 - 320)));
+      width: calc(80px + (150 - 80) * ((100vw - 320px) / (1920 - 320)));
       max-width: 150px;
-      // height: 50%;
       transform: translateX(-50%);
     }
-    // }
   }
 
   &__icons {
@@ -65,6 +49,7 @@
     width: 40px;
     height: 40px;
     cursor: pointer;
+
     img {
       width: 100%;
       height: 100%;
@@ -75,6 +60,7 @@
     position: relative;
     width: 40px;
     height: 40px;
+
     img {
       width: 100%;
       height: 100%;
