add success&error page after submitting a form

--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -67,6 +67,10 @@
       font-weight: 600;
     }
   }
+  &__price{
+    width: 100%;
+    text-align: end;
+  }
   .ingredients {
     overflow-y: auto;
     max-height: 186px;
