--- a/src/pages/Orders/Orders.scss
+++ b/src/pages/Orders/Orders.scss
@@ -1,13 +1,60 @@
-.orders{
+@import '../../styles/variables.scss';
+
+.orders {
   padding: 80px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  &__search{
+  button {
+    margin-top: 20px;
+  }
+
+  &__search {
+    margin-top: 20px;
     position: relative;
+    width: calc(300px + (600 - 300) * ((100vw - 320px) / (1920 - 320)));
 
-    &-cross{
+    &-cross {
+      color: $text-color;
+      font-size: 24px;
+      font-weight: 500;
+      cursor: pointer;
       position: absolute;
-      top: 0;
-      right: 0;
+      top: 50%;
+      right: 10px;
+      transform: translateY(-50%);
+    }
+  }
+
+  input {
+    padding: 5px;
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    outline: none;
+    width: 100%;
+  }
+
+  &__users {
+    width: calc(300px + (600 - 300) * ((100vw - 320px) / (1920 - 320)));
+    margin-top: 20px;
+    border: 1px solid $border-color;
+    border-radius: 10px;
+    padding: 8px;
+
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.09);
+      border: 1px solid $border-color;
+      box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 5px 5px 10px rgba(0, 0, 0, 0.3),
+        inset -5px -5px 10px rgba(255, 255, 255, 0.3), inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    img {
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
     }
   }
 }
