--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -4,9 +4,11 @@
   display: grid;
   gap: 8px;
   grid-template-columns: repeat(2, 1fr);
-  border: 1px solid $border-color;
   border-radius: 10px;
   padding: 8px;
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
   &__img {
     overflow: hidden;
@@ -29,7 +31,6 @@
   }
   &:hover {
     background-color: rgba(0, 0, 0, 0.09);
-    border: 1px solid $border-color;
     box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 
     5px 5px 10px rgba(0, 0, 0, 0.3),
       inset -5px -5px 10px rgba(255, 255, 255, 0.3), 
