--- a/src/components/ShopCard/ShopCard.scss
+++ b/src/components/ShopCard/ShopCard.scss
@@ -3,9 +3,18 @@
 .shopCard {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  max-width: 300px;
+  padding: 8px;
+  border-radius: 10px;
+  // max-width: 300px;
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.09);
+    box-shadow: -5px -5px 10px rgba(255, 255, 255, 0.3), 
+    5px 5px 10px rgba(0, 0, 0, 0.3),
+      inset -5px -5px 10px rgba(255, 255, 255, 0.3), 
+      inset 5px 5px 10px rgba(0, 0, 0, 0.3);
+  }
 
   &__img {
     overflow: hidden;
@@ -14,7 +23,7 @@
     -moz-border-radius: 150px 250px 30px 100px;
     -ms-border-radius: 150px 250px 30px 100px;
     -o-border-radius: 150px 250px 30px 100px;
-    max-width: 250px;
+    width: 100%;
     position: relative;
 
     img {
