--- a/src/pages/Shop/Shop.scss
+++ b/src/pages/Shop/Shop.scss
@@ -1,12 +1,21 @@
+@import "../../styles/variables.scss";
+
 .shop {
-  padding: 50px 20px 30px 20px;
+  padding: 80px 20px 30px 20px;
   display: flex;
   flex-direction: column;
-
+  @media (max-width: 768px) {
+    padding: 50px 20px 30px 20px;
+  }
   &__top {
-    display: flex;
+    padding-bottom: 10px;
+    display: grid;
     gap: 10px;
-    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    border-bottom: 1px dashed $gray;
+    @media (max-width: 500px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__img {
@@ -24,7 +33,7 @@
     }
   }
   &__goods {
-    padding-top: 20px;
+    padding-top: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
