--- a/src/pages/Form/Form.scss
+++ b/src/pages/Form/Form.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 30px;
 
   form {
     width: calc(300px + (600 - 300) * ((100vw - 320px) / (1920 - 320)));
@@ -27,5 +28,14 @@
     border: none;
     outline: none;
     width: 100%;
+  }
+
+  &__info {
+    display: flex;
+    gap: 40px;
+
+    @media (max-width: 1024px) {
+          flex-direction: column;
+    }
   }
 }
