--- a/src/components/LocationMarker/LocationMarker.scss
+++ b/src/components/LocationMarker/LocationMarker.scss
@@ -1,6 +1,7 @@
-.locationMarker{
-  &__icon{
+.locationMarker {
+  &__icon {
     width: 30px;
     height: 30px;
+    transform: translate(-50%, -100%);
   }
 }
